; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/mpt3sas/extr_mpt3sas_scsih.c_mpt3sas_port_enable_complete.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/mpt3sas/extr_mpt3sas_scsih.c_mpt3sas_port_enable_complete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.MPT3SAS_ADAPTER = type { i32 }
%struct.fw_event_work = type { %struct.MPT3SAS_ADAPTER*, i32 }

@GFP_ATOMIC = common dso_local global i32 0, align 4
@MPT3SAS_PORT_ENABLE_COMPLETE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mpt3sas_port_enable_complete(%struct.MPT3SAS_ADAPTER* %0) #0 {
  %2 = alloca %struct.MPT3SAS_ADAPTER*, align 8
  %3 = alloca %struct.fw_event_work*, align 8
  store %struct.MPT3SAS_ADAPTER* %0, %struct.MPT3SAS_ADAPTER** %2, align 8
  %4 = load i32, i32* @GFP_ATOMIC, align 4
  %5 = call %struct.fw_event_work* @kzalloc(i32 16, i32 %4)
  store %struct.fw_event_work* %5, %struct.fw_event_work** %3, align 8
  %6 = load %struct.fw_event_work*, %struct.fw_event_work** %3, align 8
  %7 = icmp ne %struct.fw_event_work* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  br label %19

9:                                                ; preds = %1
  %10 = load i32, i32* @MPT3SAS_PORT_ENABLE_COMPLETE, align 4
  %11 = load %struct.fw_event_work*, %struct.fw_event_work** %3, align 8
  %12 = getelementptr inbounds %struct.fw_event_work, %struct.fw_event_work* %11, i32 0, i32 1
  store i32 %10, i32* %12, align 8
  %13 = load %struct.MPT3SAS_ADAPTER*, %struct.MPT3SAS_ADAPTER** %2, align 8
  %14 = load %struct.fw_event_work*, %struct.fw_event_work** %3, align 8
  %15 = getelementptr inbounds %struct.fw_event_work, %struct.fw_event_work* %14, i32 0, i32 0
  store %struct.MPT3SAS_ADAPTER* %13, %struct.MPT3SAS_ADAPTER** %15, align 8
  %16 = load %struct.MPT3SAS_ADAPTER*, %struct.MPT3SAS_ADAPTER** %2, align 8
  %17 = load %struct.fw_event_work*, %struct.fw_event_work** %3, align 8
  %18 = call i32 @_scsih_fw_event_add(%struct.MPT3SAS_ADAPTER* %16, %struct.fw_event_work* %17)
  br label %19

19:                                               ; preds = %9, %8
  ret void
}

declare dso_local %struct.fw_event_work* @kzalloc(i32, i32) #1

declare dso_local i32 @_scsih_fw_event_add(%struct.MPT3SAS_ADAPTER*, %struct.fw_event_work*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
